--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" Control="IE=edge">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" Control="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet" type="text/css">
   <title>Animal Trading Cards</title>  
@@ -18,14 +18,17 @@
 			<span><em>The Yorkshire Terrier is a small dog breed of terrier type.The defining feature of the breed is its maximum size of 7 pounds (3.2 kg), although some may exceed this and grow up to 15 pounds (6.8 kg).
       </em></span>
     <ul class="item">
-      <li>Scientific Name: <em>Canis lupus familiaris</em></li>
-      <li>Average Length: <em>304 centimeters</em></li>
-      <li>Average Lifespan: <em>13 - 16 years</em></li>
-      <li>Origin Fact: <em>England</em></li>
+      <li><strong>Scientific Name:</strong> <em>Canis lupus familiaris</em></li>
+      <li><strong>Average Length: </strong><em>304 centimeters</em></li>
+      <li><strong>Average Lifespan: </strong><em>13 - 16 years</em></li>
+      <li><strong>Origin Fact: </strong><em>England</em></li>
     </ul>
-			<span>The Yorkshire Terrier (also called a "Yorkie") originated in Yorkshire (and the adjoining Lancashire), a region in northern England. 
-			</span>
+	<span>The Yorkshire Terrier (also called a "Yorkie") originated in Yorkshire (and the adjoining Lancashire), a region in northern England. 
+	</span>
     </section>
     </div>
+    <footer>    
+     <span>&copy; Stephen Obaido 2016</span>
+    </footer>  
   </body>
 </html>
