--- a/index.html
+++ b/index.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" Control="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet" type="text/css">
-  <title>Animal Trading Cards</title>  
-  <link href="cardstylesheet.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href=
+    "http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700"
+    rel="stylesheet" type="text/css">
+    <title>Animal Trading Cards</title>
+    <link href="cardstylesheet.css" rel="stylesheet">
 </head>
-  <body>
+<body>
     <div id="page-wrapper">
-  <h1>YORKSHIRE TERRIER</h1>
-    <section class="screenshot">
-      <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Sakura1web7001.jpg" alt="yorkshire terrier" width="300" height="300">		<!-- Photo Credit: wikipedia.org, image-->
-    </section>
-    <section class="description">
-			<span><em>The Yorkshire Terrier is a small dog breed of terrier type.The defining feature of the breed is its maximum size of 7 pounds (3.2 kg), although some may exceed this and grow up to 15 pounds (6.8 kg).
-      </em></span>
-    <ul class="item">
-      <li><strong>Scientific Name:</strong> <em>Canis lupus familiaris</em></li>
-      <li><strong>Average Length: </strong><em>304 centimeters</em></li>
-      <li><strong>Average Lifespan: </strong><em>13 - 16 years</em></li>
-      <li><strong>Origin Fact: </strong><em>England</em></li>
-    </ul>
-	<span>The Yorkshire Terrier (also called a "Yorkie") originated in Yorkshire (and the adjoining Lancashire), a region in northern England. 
-	</span>
-    </section>
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <h1>YORKSHIRE TERRIER</h1>
+                    <section class="screenshot">
+                        <img alt="yorkshire terrier" class="img-responsive"
+                        height="300" src=
+                        "https://upload.wikimedia.org/wikipedia/commons/e/e6/Sakura1web7001.jpg"
+                        width="300"> <!-- Photo Credit: wikipedia.org, image-->
+                    </section>
+                    <section class="description">
+                        <span><em>The Yorkshire Terrier is a small dog breed of
+                        terrier type.The defining feature of the breed is its
+                        maximum size of 7 pounds (3.2 kg), although some may
+                        exceed this and grow up to 15 pounds (6.8
+                        kg).</em></span>
+                        <ul class="item">
+                            <li><strong>Scientific Name:</strong> <em>Canis
+                            lupus familiaris</em></li>
+                            <li><strong>Average Length:</strong> <em>304
+                            centimeters</em></li>
+                            <li><strong>Average Lifespan:</strong> <em>13 - 16
+                            years</em></li>
+                            <li><strong>Origin Fact:</strong>
+                            <em>England</em></li>
+                        </ul><span>The Yorkshire Terrier (also called a
+                        "Yorkie") originated in Yorkshire (and the adjoining
+                        Lancashire), a region in northern England.</span>
+                    </section>
+                    <footer>
+                        <span>&copy; Stephen Obaido 2016</span>
+                    </footer>
+                </div>
+            </div>
+        </div>
     </div>
-    <footer>    
-     <span>&copy; Stephen Obaido 2016</span>
-    </footer>  
-  </body>
+</body>
 </html>
